--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
-    "@angular/fire": "7.5",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
@@ -24,6 +24,7 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^5.3.0",
+    "firebase": "^9.23.0",
     "jquery": "^3.7.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
